swager index schema added
